[package]
name = "dis-yaxpeax-net"
version = "0.1.0"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = true

[dependencies]
fastly = "^0.7.3"

hex = "0.4.0"
num-traits = "0.2.10"

itertools = "*"

# common interfaces for all yaxpeax decoders
yaxpeax-arch-02 = { package = "yaxpeax-arch", version = "0.2.4", default-features = false, features = ["std"] }
yaxpeax-arch-01 = { package = "yaxpeax-arch", version = "0.0.5", default-features = false, features = [] }

yaxpeax-arm = { version = "0.1.1", default-features = false, features = ["std"] }
yaxpeax-avr = { version = "0.1.0" }
yaxpeax-m16c = { version = "0.1.0" }
yaxpeax-mips = { version = "0.1.0" }
yaxpeax-msp430 = { version = "0.1.1" }
yaxpeax-lc87 = { version = "1.0.0" }
yaxpeax-pic17 = { version = "0.1.0" }
yaxpeax-pic18 = { version = "0.1.0" }
yaxpeax-x86 = { version = "1.1.0", default-features = false, features = ["fmt", "std"] }
yaxpeax-ia64 = { version = "0.2.1" }
yaxpeax-superh = { version = "1.0.0" }
yaxpeax-6502 = { version = "0.0.2" }
